06-WEB/0x05-BigBiscuit-H/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: big-biscuit
  labels:
    app: big-biscuit
spec:
  ports:
    - name: http-port
      port: 5000
  selector:
    app: big-biscuit
